gitops/hairsera/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hairsera
  namespace: hairsera
spec:
  type: ClusterIP
  selector:
    app: hairsera
  ports:
  - name: http
    port: 80
    targetPort: 3000
