gitops/hairsera/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hairsera
  namespace: hairsera
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-hairsera
  hostnames:
  - hair.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hairsera
      port: 80
