gitops/hairsera/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hairsera
  namespace: hairsera
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - hairsera.sync.lt
    secretName: hairsera-letsencrypt
  rules:
  - host: hairsera.sync.lt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hairsera
            port:
              name: http
